--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
   </properties>
 
   <dependencies>
-    <dependency>
+	<dependency>
+	  <groupId>org.pircbotx</groupId>
+	  <artifactId>pircbotx</artifactId>
+	  <version>2.0.1</version>
+	</dependency>
+	<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
